--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\TweetService:
+        autowire: true
+        arguments:
+            $producer: "@old_sound_rabbit_mq.tweet.published_producer"
