--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=d352d5ce8cc3fdd026ad1e1146146471
 ###< symfony/framework-bundle ###
 
 ###> php-amqplib/rabbitmq-bundle ###
-RABBITMQ_URL=amqp://guest:guest@localhost:5672
+RABBITMQ_URL=amqp://user:password@rabbit-mq:5672
 ###< php-amqplib/rabbitmq-bundle ###
 
 ###> doctrine/doctrine-bundle ###
